Updates from Overleaf

--- a/SDTN_Networks_v2.tex
+++ b/SDTN_Networks_v2.tex
@@ -43,10 +43,10 @@
 \let\WriteBookmarks\relax
 \def\floatpagepagefraction{1}
 \def\textpagefraction{.001}
-\shorttitle{SDN-Based Multilayer Multidomain Use Cases: Topology Visualization and Service Provisioning}
+\shorttitle{Hybrid SDN  Multilayer Use Cases Implementation: Topology Visualization and Service Provisioning}
 \shortauthors{S. Barguil et~al.}
 
-\title [mode = title]{SDN-Based Multilayer Multidomain Use Cases: Topology Visualization and Service Provisioning}                      
+\title [mode = title]{Hybrid SDN  Multilayer Use Cases Field Trial Implementation: Topology Visualization and Service Provisioning}                      
 %%\tnotemark[1,2]
 
 %%\tnotetext[1]{This document is the results of the research
@@ -117,9 +117,9 @@ Bengaluru - 560 035, India}
 
 
 \begin{abstract}
-Software-Defined Networking (SDN) is a dominant paradigm already transforming everyday operations in Telecommunications Networks and Providers. SDN came out with the idea of decoupling forwarding and control plane in campus switches via OpenFlow, but it has evolved to cope with the needs of extensive production networks. Network operators cannot change their footprint to upgrade the entire network to support SDN starting from a greenfield. Latter is why Telco operators adapt the initial SDN concept into a hybrid SDN approach to have a pragmatic, evolutionary, and economically viable solution. This paper presents and tests a Hybrid Hierarchical SDN architecture based on a set of SDN controllers for each technological domain and a Software-Defined Transport Networking (SDTN) controller, which deals with the end-to-end multilayer, multidomain aspects of the network services, topology, performance and inventory. Such a hierarchical approach allows a service provider to migrate islands progressively in SDN domains, starting with the abstract programmatic interfaces and, when the devices support it, programming each device automatically with a standard interface.
+Software-Defined Networking (SDN) is a dominant paradigm already transforming everyday operations in Telecommunications Networks and Providers. SDN came out with the idea of decoupling forwarding and control plane in campus switches via OpenFlow, but it has evolved to meet with the needs of extensive production networks. Network operator cannot change the entire network's footprint and upgrade the entire network to support SDN at once. This is why Telco operators adapt the initial SDN concept into a hybrid SDN approach to have a pragmatic, evolutionary, and economically viable solution. This paper presents and tests a Hybrid Hierarchical SDN architecture based on a set of SDN controllers for each technological domain and a Software-Defined Transport Networking (SDTN) controller, which deals with the end-to-end multilayer, multidomain aspects of the network services, topology, performance and inventory. Such a hierarchical approach allows a service provider to migrate portions of the network progressively into SDN domains, starting with abstract programmatic interfaces and, if the devices supports it, programming each device automatically with a standard interface.
 
-Service provisioning is a critical process in the value chain for supplying next-generation services to customers of all sizes and characteristics. Commonly, human interactions with the network perform the service provisioning manually; then, the interactions are semi-automatic supported by service activator-tuned tools for the vendor-specific combination that comprised the Net. With the advent of SDN, service delivery operations can be performed in a vendor-agnostic fashion using standard data models and novel protocols. However, new challenges persist, such as orchestrating multiple layers required for covering long-haul, medium, and short distances. Multidomain networking between IP/MPLS-based layers and underlying WDM multilayer technologies require further coordination and orchestration. This paper presents the use cases to enable multidomain service provisioning and the corresponding end-to-end topology visualization. Moreover, this work relies on a hybrid SDN architecture combining the capabilities of the SDTN controller with Commercial off-the-shelf devices.
+Service provisioning is critical for supplying next-generation services to customers of all sizes and characteristics. Historically, humans manually perform service provisioning within a network; after this there are semi-automatic operations supported by service activator-tuned tools for the vendor-specific combination that comprised the Network. With the advent of SDN, service delivery operations can be performed in a vendor-agnostic fashion using standard data models and novel protocols. However, new challenges persist, such as orchestrating multiple layers required for covering long-haul, medium, and short distances. Multidomain networking between IP/MPLS-based layers and underlying WDM multilayer technologies require further coordination and orchestration. This paper presents the use of SDN to enable multidomain service provisioning and the corresponding end-to-end topology visualization. Moreover, this work relies on a hybrid SDN architecture combining the capabilities of a SDTN controller with Commercial off-the-shelf devices.
 
 \end{abstract}
 
@@ -145,46 +145,46 @@ Software-Defined Networking,
 \maketitle
 
 \section{Introduction}
-SDN has emerged as the new reference paradigm to promote network automation and programmability. SDN has championed the idea of a real transformation of all aspects of service delivery, network, and traffic management. Mostly, due to end-to-end automated service provisioning, monitoring, fast issue detection, and event-based decision are mandatory functionalities to offer a high-quality customer experience \cite{ordonez2017network,ong2017onf}. Similarly, Boucadair et al. \cite{boucadair2014software} refers to SDN as the ability to completely master the various components of the delivery chain, so that the service delivered complies the customer needs.
+SDN has emerged as the new reference paradigm to promote network automation and programmability. SDN has championed the idea of a real transformation of all aspects of service delivery, network, and traffic management. The objective of this transformation is to offer a high-quality customer experience and it require functionalities such as end-to-end automated service provisioning, monitoring and fast issue detection. \cite{ordonez2017network,ong2017onf}. Similarly, Boucadair et al. \cite{boucadair2014software} refers to SDN as the ability to completely master the various components of the delivery chain, so that the service delivered complies the customer needs.
 
-Conceptually, SDN permits a full decoupling between control and forwarding plane on Physical Network Functions (PNFs) \cite{brief2014openflow}. This concept admits the centralization of complex tasks and enables the integration of white boxes (smaller equipment, higher port density, lower processing capacity, with generic hardware and more inexpensive production cost) in the network access layers. However, this promise is still not a comprehensive reality. Although the term SDN seems quite new, more than twelve (12) years have passed since OpenFlow \cite{brief2014openflow} was defined and NICIRA was founded. NICIRA was the first company to develop a commercial SDN controller (NOX) \cite{gude2008nox,tavakoli2009applying}. Despite this and millionaire investments, today almost no service provider has a fully operatiional SDN network. Some of the main barriers found in this journey by Telco providers are:
+Conceptually, SDN permits a full decoupling between control and forwarding plane on Physical Network Functions (PNFs) \cite{brief2014openflow}. This concept allows the centralization of complex tasks and enables the integration of white boxes (smaller equipment, higher port density, lower processing capacity, with generic hardware and less expensive production cost) in the network access layers. However, this promise is still not a comprehensive reality. Although the term SDN seems quite new, more than twelve (12) years have passed since OpenFlow was defined and NICIRA was founded \cite{brief2014openflow}. NICIRA was the first company to develop a commercial SDN controller (NOX) \cite{gude2008nox,tavakoli2009applying}. Despite this and millionaire investments, today almost no service provider has a fully operational SDN network. Some of the main barriers found in the SDN implementation by Telco providers are:
 
 \begin{itemize}
     \item There are still many dependencies on manually executed tasks.
     \item Network control tasks cannot be fully centralized.
-    \item The stack of protocols deployed in the network is very complex.  The knowledge that network operators require to solve problems continues to be very vendor-specific and specialized.
+    \item The stack of protocols deployed in the network is very complex.  The knowledge that network operators require to solve problems continue to be very vendor-specific and specialized.
     \item Confidence in automation solutions is not very high.
     \item Many networks have grown with the merge of companies, technologies, and suppliers. Thus, migrations and integrations are expensive. 
-   \item Standardization is not close, which generates a lack of complete among networking infrastructure suppliers.
+   \item Standardization is not finished, which generates a lack of completeness among networking infrastructure suppliers.
 \end{itemize}
 
-New approaches have arisen to take care of the above constraints and gradually burst the adoption of SDN. Some initiatives have worked independently to close the standardization gaps or to enable the overlay SDN solutions \cite{bemby2015vino}. Some others promote the combination of pure SDN controllers with well-defined Application Programmable Interfaces APIs, to not only support both legacy and SDN ready-devices but also to speed-up the SDN inclusion. The last sort of solutions named as hybrid-SDN can shoulder numerous scenarios. Mainly, the flavours differ between them in the Topology-role, the services supported, or the classes managed by each variety of device \cite{vissicchio2014opportunities}. 
+New approaches have arisen to take care of the above constraints and gradually increase the adoption of SDN. Some initiatives have worked independently to close the standardization gaps or to enable the overlay of SDN solutions \cite{bemby2015vino}. Some others promote the combination of pure SDN controllers with well-defined Application Programmable Interfaces APIs, to support both legacy and SDN ready-devices. The last sort of initiative named hybrid-SDN can support numerous scenarios. Those hybrid SDN flavors differ between them in the Topology-role, the services supported, or the classes managed by each variety of device \cite{vissicchio2014opportunities}. 
 
-Hence, based on the premise that Service Provider Networks, which rely on a well-known set of control plane protocols and a blend of Commercial off-the-shelf devices, demands hybrid SDN solutions to achieve programmability and enter into the SDN era. The question that emerges and the scope of this article are the approaches to exhibit the network as a unique API without disrupting the existing network. 
+Hence, based on the premise that Service Provider Networks, which rely on a well-known set of control plane protocols and a blend of Commercial off-the-shelf devices, demands hybrid SDN solutions to achieve programmability and enter into the SDN era. The question that emerges and the scope of this article is what approaches use to expose the network as a unique API without disrupting the existing network. 
 
-Thus, in this article, a field trial of a Hybrid Hierarchical SDN architecture for a service provider is described. The trial includes a hierarchical control layer with multiple network controllers (one End-to-End Transport Controller, two for IP/MPLS, and two for DWDM), as well as a real, operational multi-vendor commercial underlay network. This work tests four use cases using well defined Network APIs: three of them of multidomain scenarios to validate the viability of the implementation of APIs in the control layer of several vendors. The other one is a single domain test, focused on L2VPN provision using a technological description. The paper details remarkable limitations found until now to produce entirely standard and interoperable solutions, challenges, and solutions adequate to give programmability in brownfield networks.
+Thus, in this article, a field trial of a Hybrid Hierarchical SDN architecture for a service provider is described. This trial includes a hierarchical control layer with multiple network controllers (one for End-to-End Transport Controller, two for IP/MPLS, and two for DWDM), as well as a real, operational multi-vendor commercial underlay network in Bogota, Colombia. This work tests four use cases using well defined Network APIs: three of them from multidomain scenarios to validate the viability of the implementation of APIs in the control layer of several vendors. The remaining one is a single domain test, focused on L2VPN provision using a technological description. This paper details shocking limitations found to produce entirely standardized and interoperable solutions, along with challenges and solutions to give programmability in brownfield networks.
 
-The paper is structured as follows: \cref{section:arq} describes the proposed SDN reference architecture, named iFUSION. This architecture was defined to evolve Telefonica's transport network in the coming years selecting the hybrid-SDN approach. Then, \cref{section:net} details the principles of network programmability, including the concepts of YANG modelling and protocols used within the tests. \Cref{section:models} defines and differentiates service and device models. Additionally, we describe the specific models used during the evaluation for IP/Optical service provisioning and topology collection. Based on the defined models, the \cref{sec:usecasesdef} specifies the set of uses cases for this implementation. \Cref{section:trial} details the test scenario and cases (based on iFUSION premises), including SDN controllers and underlay network employed. \Cref{section:results} reports the results achieved in this Field Trial evaluation. Finally, \cref{section:conclusions} summarizes the conclusion of the present work and the next steps.
+The paper is structured as follows: \cref{section:arq} describes the proposed SDN reference architecture, named iFUSION. This architecture was defined to evolve Telefonica's transport network in the coming years using the hybrid-SDN approach. \Cref{section:net} details the principles of network programmability, including the concepts of YANG modelling and protocols used within the tests. \Cref{section:models} defines and differentiates service and device models. Additionally, we describe the specific models used during the evaluation for IP/Optical service provisioning and topology collection. Based on the defined models, \cref{sec:usecasesdef} specifies the set of use cases for this implementation. \Cref{section:trial} details the test scenarios and cases (based on iFUSION premises), including SDN controllers and underlay network employed. \Cref{section:results} reports the results achieved in this Field Trial evaluation. Finally, \cref{section:conclusions} summarizes the conclusion of the present work and the next steps.
 
 \section{SDN Architecture}
 \label{section:arq}
 
-There is not a single method to facilitate the construction of SDN in carrier-grade scenarios. Until now, several options have been proposed \cite{bakshi2013considerations,karakus2017survey,birk2016evolving}. Some others as Google, has successfully put on production their own SDN backbone named B4 \cite{jain2013b4}. However, based on the surveys done latterly \cite{campbell1999survey,sinha2017survey,boucadair2014software}, the reality of network service provider industry is the lack of consensus on how to make the SDN automation premises completely real. In that sense, the Hybrid-SDN concept has risen to describe three of the main gaps to be closed in the future network architectures:
+There is not a single method to facilitate the construction of SDN in carrier-grade scenarios. Until now, several options have been proposed \cite{bakshi2013considerations,karakus2017survey,birk2016evolving}. Other companies like Google, have successfully put in production their own SDN backbone (called B4) \cite{jain2013b4}. However, based on surveys done  \cite{campbell1999survey,sinha2017survey,boucadair2014software}, there is a lack of consensus among the network service provider industry regarding how to make SDN automation premises a reality. In that sense, the Hybrid-SDN concept has risen to describe three of the main gaps to be closed by future network architectures:
 \begin{itemize}
-    \item Coexistence: Refers to the heterogeneity in the infrastructure. It can be in the data plane (legacy and the SDN-ready devices), the control plane (NMS vs SDN Controllers), or both. 
+    \item Coexistence: Refers to the heterogeneity in the infrastructure. It can be in the data plane (legacy and SDN-ready devices), the control plane (NMS vs SDN Controllers), or both. 
     \item Communication: Conveys the idea of full integration among various components of the network.
-    \item Crossbreeding: Mainly indicates the degree of hybridization-based on architectural trade-offs. For example: costs of transition, incremental installations or how ease of automation, among others. 
+    \item Crossbreeding: Mainly indicates the degree of hybridization-based on architectural trade-offs. For example: costs of transition, incremental installations or automation readiness, automation easiness, among others. 
 \end{itemize}
 
-To surpass these challenges, several conceptual architectures have been proposed \cite{vissicchio2014opportunities,vissicchio2017safe}. Some of them are part of industrial definitions created within the consensus of standardization entities \cite{lee2015requirements}, and the services providers themselves have created others. One of the most promising reference models is the \uppercase{iFUSION} architecture \cite{contreras2019ifusion}. iFUSION is based on the "controller-only" definition of \cite{sinha2017survey} to support network automation and programmability in a service provider environment. The i\uppercase{FUSION} main principles include the use of:
+To surpass these challenges, several conceptual architectures have been proposed \cite{vissicchio2014opportunities,vissicchio2017safe}. Some of them are part of industry definitions created within the consensus of standardization entities \cite{lee2015requirements}, and some others have been created by the service providers themselves. One of the most promising reference model is the \uppercase{iFUSION} architecture \cite{contreras2019ifusion}. iFUSION is based on the "controller-only" definition of \cite{sinha2017survey} to support network automation and programmability in a service provider environment. The i\uppercase{FUSION} main principles include the use of:
 \begin{itemize}
     \item Standard Northbound interfaces (NBI) leveraging \uppercase{RESTCONF/YANG} \cite{bierman2017RESTCONF}.
     \item Standard Configuration Southbound interfaces (SBI) leveraging \uppercase{NETCONF/YANG} \cite{enns2011network}.
-    \item YANG data models based on the latest work of the standards development organizations (SDOs) \cite{bjorklund2016yang}: \uppercase{IETF}, Open Networking Foundation (ONF)  and \uppercase{OpenConfig}.
+    \item YANG data models based on the latest work of  standards development organizations (SDOs) \cite{bjorklund2016yang}: \uppercase{IETF}, Open Networking Foundation (ONF)  and \uppercase{OpenConfig}.
 \end{itemize}
 
-As a complement to this architecture: APIs, Yang Data models, and standard protocols are publicly available as part of the i\uppercase{FUSION} program  defined in  \cite{apistelefonica}. These definitions characterise the interaction of the control layer with the SDN devices in IP/MPLS and Optical convergent Networks. 
-The iFUSION architectural design beholds the coexistence of legacy and SDN-Ready devices. Leveraging on the hybrid-SDN approach, we must highlight that a comprehensive integration and compliance rely on the adoption of a fully-standard approach. However,  in the industry, it is a lack of complete specifications. Thus, until now, the acceptance of proprietary SBIs to configure the devices via common API interactions in the control layer is the accepted solution to handle this drawback.
+As a complement to this architecture APIs, Yang Data models, and standard protocols are publicly available as part of the i\uppercase{FUSION} program  defined in  \cite{apistelefonica}. These definitions characterise the interaction of the control layer with the SDN devices in IP/MPLS and Optical convergent Networks. 
+The iFUSION architectural design beholds the coexistence of legacy and SDN-Ready devices. Leveraging on the hybrid-SDN approach, we must highlight that a comprehensive integration and compliance rely on the adoption of a fully-standard approach. However,  in the industry, there is a lack of complete specifications. Thus, until now, the acceptance of proprietary SBIs to configure the devices via common API interactions in the control layer is the accepted solution to handle this drawback.
 
 \begin{figure*}
 	\centering
@@ -196,25 +196,25 @@ The iFUSION architectural design beholds the coexistence of legacy and SDN-Ready
 The i\uppercase{FUSION} architecture can be shown in terms of components and relationships among them in \cref{FIG:1}. Each of the architectural pillars are defined as:
 
 \begin{itemize}
-\item \textbf{Transport SDN}: The entire transport network controlled by the following elastic principles. It is divided into SDN domains for scalability, technology, and administrative policies.
+\item \textbf{Transport SDN}: The entire transport network. It is divided into SDN domains for scalability, technology, and administrative policies.
 
 \item \textbf{SDN Domain}: A collection of network elements (NE) under the supervision of the same SDN Controller. There are several viable levels of decoupling. The preferred one in Telefonica's view depends on technology. For instance, for MPLS, the NE runs the distributed protocols (e.g., IS-IS TE, RSVP-TE), and the SDNc only needs to configure it.
 
-\item \textbf{SDN Domain Controller} (IP SDNc): It is in charge of a set of network elements. It has standard southbound interfaces that depend on the technology, but not the vendor's equipment, to communicate with the network elements. It also has a northbound interface to communicate with the SDN Orchestrator and the OSS.
+\item \textbf{SDN Domain Controller} (IP SDNc): It is in charge of a set of network elements. It has standard southbound interfaces that depend on the technology, but not on the vendor's equipment, to communicate with the network elements. It also has a northbound interface to communicate with the SDN Orchestrator and the OSS.
 
 \item \textbf{Software Defined Transport Network (SDTN) Controller}: It is in charge of providing services through several domains.. 
 
-\item \textbf{Southbound Interface (SBI)}: It is the interface, implemented following standard definitions, between the SDN domain Controller and the Network Element. Not only does the communication protocol need to be standard, but also the data model used.
+\item \textbf{Southbound Interface (SBI)}: It is the interface, implemented following standard definitions, between the SDN domain Controller and the Network Element. Not only the communication protocol needs to be standard, but also the data model used.
 
-\item \textbf{Northbound Interface (NBI)}: It is the interface, based on a standard, between the SDN domain Controller and the OSSs and SDN Transport.
+\item \textbf{Northbound Interface (NBI)}: It is the interface, based on a standard, between the SDN domain Controller and the OSS and SDN Transport.
 
 \end{itemize}
 
-The \uppercase{iFUSION} architecture is designed as a hierarchical model where each network segment is controlled by a dedicated SDN domain controller. The transport network, due to its wide scope and complexity, is divided into three main technology domains: \hyperref[section:ip]{IP},  \hyperref[section:dwdm]{Optical}, and Microwave. Each domain, as specified in the i\uppercase{FUSION} program, is described in the following sub-sections.   
+The \uppercase{iFUSION} architecture is designed as a hierarchical model where each network segment is controlled by a dedicated SDN domain controller. The transport network, due to its wide scope and complexity, is divided into three main technology domains: \hyperref[section:ip]{IP},  \hyperref[section:dwdm]{Optical}, and Microwave. Each domain is specified in the following sub-sections as specified in the i\uppercase{FUSION} program.   
 
 \subsection {IP domain}
 \label{section:ip}
-IP networks are set-up following a hierarchical model, mixing equipment from different suppliers. The IP boxes are interoperable at both data and control plane levels (e.g., routing protocols such as IS-IS, OSPF or BGP). Due to scalability reasons, IP networks are typically subdivided into IP domains, so the routing and control protocols are confined to their administrative domains.
+IP networks are set-up following a hierarchical model, mixing equipment from different vendors. The IP boxes are interoperable at both data and control plane levels (e.g., routing protocols such as IS-IS, OSPF or BGP). Due to scalability reasons, IP networks are typically subdivided into IP domains, so the routing and control protocols are confined to their administrative domains.
 
 \begin{figure*}
 	\centering
@@ -224,7 +224,7 @@ IP networks are set-up following a hierarchical model, mixing equipment from dif
 \end{figure*}
 
 The foreseen SDN solution for the IP segment is based on a single, multi-vendor IP SDNc, whose goal is to configure the IP network elements, as shown in \cref{FIG:2}. The target SBI for vendor-agnostic device configuration shall be compliant with NETCONF standard protocol. The set of device configuration data models are the ones defined in OpenConfig. 
-The IP SDNc not only shall serve to configure the devices but also shall perform Traffic Engineering (TE) and Path Computation Element (PCE) related tasks. With that purpose, some standard and mature control protocols, such as PCEP and BGP-LS for MPLS networks shall be implemented to complete the definition of the SBI. As a result, the IP SDNc assumes the control/management of:
+The IP SDNc shall not only serve to configure the devices but also perform Traffic Engineering (TE) and Path Computation Element (PCE) related tasks. With that purpose, some standard and mature control protocols, such as PCEP and BGP-LS for MPLS networks must be implemented to complete the definition of the SBI. As a result, the IP SDNc assumes the control/management of:
 \begin{itemize}
 \item Device configuration of interfaces (VLANs) and routing protocols (BGP, ISIS, among others).
 \item Traffic Engineering of MPLS tunnels (LSPs). 
@@ -244,7 +244,8 @@ Due to the maturity of the IETF and Openconfig models, the i\uppercase{FUSION} a
 
 \subsection{Optical domain}
 \label{section:dwdm}
-Transport optical networks from different system vendors are set up on a regional basis, either for technology redundancy, due to different optical performance requirements (metro vs. long-haul), or simply for commercial reasons. 
+Transport optical networks from different system vendors are segmented on a regional basis, either for technology redundancy, different optical performance requirements (metro vs. long-haul), or simply for commercial reasons. 
+
 Without line-side interoperability of different optical transceivers and Reconfigurable Optical Add-Drop Multiplexers (ROADMs), there is not a competitive advantage on a uniform configuration interface of the optical devices. Since they cannot be mixed in a multi-vendor scenario, mainly because, both line systems and transceivers must be from the same vendor.
 
 In the short term, Optical SDNc are expected to provide network programmability and interoperability towards upper layers (multi-layer) and between vendors (multi-domain, multi-vendor), through the support of standard NBIs (i.e., coordination will be provided by upper layer hierarchical SDTN). This approach will enable the setup and tear down of connections in optical channels (OCh and ODU layers), the discovery of the network resources to compose a layered uniform view based on the OTN hierarchy, and the monitoring of the optical network.
@@ -263,7 +264,7 @@ In the medium- and long-term, the direct programmability of the components can h
 \subsection{Integration of SDTN in the overall operator’s systems architecture}
 \label{section:sdtn}
 The SDTN Controller will keep visibility of all the transport network segments. It will expose an abstracted topology view of the network resources and the available set of network services to different clients through its Northbound APIs.  
-One of the main drivers of deploying an SDTN controller is service automation. SDTN will enable it progressively, facilitating services and network configurations carried out manually today to become automated and available through this abstraction layer.  The level of abstraction can be different according to the needs of the northbound client (e.g., OSS, service orchestrators/SDN controllers, NFV orchestrator, etc.). 
+One of the main drivers of deploying a SDTN controller is service automation. SDTN will enable it progressively, facilitating services and network configurations carried out manually today to become automated and available through this abstraction layer.  The level of abstraction can be different according to the needs of the northbound client (e.g., OSS, service orchestrators/SDN controllers, NFV orchestrator, etc.). 
 
 The information exported through the NBI towards the OSS and other platforms will cover a number of functional areas. The service’s provisioning and network topology visualization within the Resource Lifecycle Management (RLM) domain will be the first set of functionalities adopted by the SDTN controller; tested in this paper. Progressively the SDTN will include Performance Management (PM), Network Planning and Design (NPD), Fault Management (FM) and Resource Inventory Management (RIM) areas. The inclusion of these functional blocks is conditioned to the standardization of the required data models for the SDTN NBI and SDNc SBI.
 
@@ -843,6 +844,7 @@ Additionally, the scope of this work can be extended to cover traffic engineerin
 \section*{Acknowledgements}
 This work has been supported by Telefonica I+D as part of the Fusion, iFusion and OpenFusion projects. The authors would like to thank all the SDN technical teams and leaders that participated in the development, deployment and testing of this SDTN architecture. Special thanks for their contributions to Manuel Santiago, Gloria Gomez, Julia Rodriguez and Zdravko Stevkovski from Infinera; Randy Quimbay and David Rocha from Telefonica Colombia; and Andrea Valencia, Juan Suarez, Juan Agredo and Daniel Hernandez from Wipro Limited.   
 
+Work partially supported by the Spanish AURORAS (RTI2018-099178-B-I00)
 
 %% Loading bibliography style file
 %\bibliographystyle{model1-num-names}
@@ -893,7 +895,7 @@ Natalia Isabel Maya Perfetti is an Electronics and Telecommunications engineer g
 \endbio
 
 \bio{figs/vilalta.jpg}
-Ricard Vilalta (Girona, 1983) graduated in telecommunications engineering in 2007 and received a Ph.D. degree in telecommunications in 2013, both from the Universitat Politècnica de Catalunya (UPC), Spain. He joined CTTC in 2010, and he is a senior researcher in the Optical Networks and Systems Department. He is an active contributor in several standardization bodies such as ONF (OTCC), ETSI (NFV, ZSM), and IETF (CCAMP, TEAS). He is also a member of the technical steering team of Open Transport Configuration & Control in ONF. He is leading open source contributions and features in ETSI Open Source MANO (OSM) with special focus on 5G technologies.
+Ricard Vilalta (Girona, 1983) graduated in telecommunications engineering in 2007 and received a Ph.D. degree in telecommunications in 2013, both from the Universitat Politècnica de Catalunya (UPC), Spain. He joined CTTC in 2010, and he is a senior researcher in the Optical Networks and Systems Department. He is an active contributor in several standardization bodies such as ONF (OTCC), ETSI (NFV, ZSM), and IETF (CCAMP, TEAS). He is also a member of the technical steering team of Open Transport Configuration \& Control in ONF. He is leading open source contributions and features in ETSI Open Source MANO (OSM) with special focus on 5G technologies.
 \endbio
 
 \bio{figs/Edward_Echeverry_v2.jpg}
